<resources>
    <string name="app_name" translatable="false">Cloud Launcher</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_delete">Delete</string>
    <string name="item_icon_description" translatable="false">Application Icon</string>
    <string name="launcher_logo_description" translatable="false">Launcher Logo</string>

    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello, Cloud Launcher!</string>
    <string name="slide_1_desc">The prettiest launcher you have ever seen!</string>

    <string name="slide_2_title">Light One</string>
    <string name="slide_2_desc">Easy-to-use and as light as clouds!</string>

    <string name="slide_3_title">Clearest Usage</string>
    <string name="slide_3_desc">Use it the way you want with two grids!</string>

    <string name="slide_4_title">Awesome Themes</string>
    <string name="slide_4_desc">Pick any of the two themes!</string>
    <string name="standard_grid_text">Standard Grid</string>
    <string name="extended_grid_text">Extended Grid</string>
    <string name="standard_grid_size" translatable="false">4 : 6</string>
    <string name="extended_grid_size" translatable="false">5 : 7</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
</resources>
