<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prefs_color"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/grid_weight"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/standard_grid_icon"
                android:layout_width="@dimen/pref_icon_width_height"
                android:layout_height="@dimen/pref_icon_width_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:srcCompat="@drawable/ic_standard_grid" />

            <RadioButton
                android:id="@+id/standard_grid_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/standard_grid_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/standard_grid_size"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/extended_grid_icon"
                android:layout_width="@dimen/pref_icon_width_height"
                android:layout_height="@dimen/pref_icon_width_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:srcCompat="@drawable/ic_extended_grid" />

            <RadioButton
                android:id="@+id/extended_grid_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extended_grid_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/extended_grid_size"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/themes_weight"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/light_theme_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:text="@string/light_theme"
            android:textStyle="italic"
            android:textAppearance="?android:textAppearanceLarge" />

        <RadioButton
            android:id="@+id/dark_theme_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dark_theme"
            android:textStyle="italic"
            android:textAppearance="?android:textAppearanceLarge" />

    </LinearLayout>


</LinearLayout>
