<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/grids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pref_icon_margin">

        <LinearLayout
            android:id="@+id/standard_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pref_icon_margin"
            android:layout_marginRight="@dimen/pref_icon_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/standard_grid_icon"
                android:layout_width="@dimen/pref_icon_width_height"
                android:layout_height="@dimen/pref_icon_width_height"
                android:layout_marginBottom="@dimen/pref_icon_margin"
                app:srcCompat="@drawable/ic_standard_grid" />

            <RadioButton
                android:id="@+id/standard_grid_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/standard_grid_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/standard_grid_size"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pref_icon_margin"
            android:layout_marginStart="@dimen/pref_icon_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/extended_grid_icon"
                android:layout_width="@dimen/pref_icon_width_height"
                android:layout_height="@dimen/pref_icon_width_height"
                android:layout_marginBottom="@dimen/pref_icon_margin"
                app:srcCompat="@drawable/ic_extended_grid" />

            <RadioButton
                android:id="@+id/extended_grid_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extended_grid_text"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/extended_grid_size"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/switch_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_inset_half"
        android:switchPadding="@dimen/content_inset"
        android:text="@string/dark_theme"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginBottom="@dimen/pref_icon_margin"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/launch"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />

</LinearLayout>
